[tool.poetry]
name = "fastlms"
version = "0.1.0"
description = ""
authors = ["Satyam298 <satyamjain298@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.2"
fastapi = "^0.103.1"
pydantic = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
